[package]
name = "lroot"
version = "0.1.0"
edition = "2021"

[lib]
name = "lroot"

[[bin]]
name = "lroot"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "ioctl", "process", "signal", "socket", "term"] }
libc = "0.2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
